# my_rpg

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  my_rpg
assets/: untitled.csv
assets/config/: songs.config  songs.config.bak  textures.config
assets/csv/: test_bottom.csv  test_top.csv  test_top2.csv
assets/levels/: first_level.lvl  first_level_Meubles 2.csv  first_level_Meubles.csv  first_level_Murs.csv  first_level_Objets.csv  first_level_Sol.csv  first_level_Trigger.csv  second_level.lvl  second_level_Meubles 2.csv  second_level_Meubles.csv  second_level_Murs.csv  second_level_Objets.csv  second_level_Sols.csv  second_level_Trigger.csv  test.lvl  try_bottom.csv  try_top.csv
assets/map/: arena.tmx  map1.tmx  map2.tmx  sah.csv  tilesheet.tsx
assets/maps/: 01tizeta_floor_d.tsx  Map.tmx  house_inside.tsx  interior.tsx  map2.tmx  map3.tmx  map4.tmx  test_map.tmx  tilesheet.tsx  town_buildings.tsx
include/: dev.h  my.h  my_printf.h  my_rpg.h
lib/my/: CMakeLists.txt  Makefile
src/: #sprite.c#  destroy.c  display.c  event.c  fight.c  fonction.c  get_config.c  graphic.c  init_fight.c  init_setting.c  interact.c  load_sounds.c  main.c  my_rpg.c  sound.c  sprite.c  texture.c
src/display/: camera.c  display_level.c  display_player.c
src/events/: keyboard_events.c
src/levels/: add_enemies_to_level.c  add_map_to_level.c  add_name_to_level.c  add_tilesheet_to_level.c  csv_to_lvl.c  display_levels.c  enemies_to_lvl.c  get_level.c  load_level.c  load_levels.c  (+7 more)
test/: CMakeLists.txt  redirect_criterion.c  test_my_rpg.c
test/include/: test.h
(+62 files in other folders)
